--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/icons": "^1.0.0",
+    "@formkit/themes": "^1.0.0",
     "@formkit/vue": "^1.0.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
